# Lawliet

./: .gitignore  CMakeLists.txt  README.md  knowledge.md  uci_tuner
src/: create_nnue_structure.sh  main.cpp
src/ai/: lawliet.cpp  lawliet.hpp  nnue.cpp  nnue.hpp  time_manager.cpp  time_manager.hpp  uci.cpp  uci.hpp
src/core/: .parameters.cpp.kate-swp  board.cpp  board.hpp  engine_options.hpp  magic_constants.hpp  parameters.cpp  parameters.hpp
src/tools/stockfish_annotator/: annotator_main.cpp
src/tools/texel_tuner/: tuner_main.cpp
src/ui/: interface.cpp  interface.hpp
